--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
-    "astro": "^4.16.11"
+    "astro": "^4.16.11",
+    "microcms-js-sdk": "^3.1.2"
   }
 }
