--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/vercel": "^7.8.2",
     "astro": "^4.16.11",
-    "microcms-js-sdk": "^3.1.2"
+    "microcms-js-sdk": "^3.1.2",
+    "nodemailer": "^6.9.16"
   }
 }
