--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/vercel": "^7.8.2",
+    "@vercel/node": "^2.10.3",
     "astro": "^4.16.11",
     "microcms-js-sdk": "^3.1.2",
     "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0"
   }
 }
