--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/vercel": "^7.8.2",
+    "@sendgrid/mail": "^8.1.4",
     "@vercel/node": "^2.10.3",
     "astro": "^4.16.11",
-    "microcms-js-sdk": "^3.1.2",
-    "nodemailer": "^6.9.16"
+    "googleapis": "^144.0.0",
+    "microcms-js-sdk": "^3.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.9.0"
