--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "whatwg-url": "^14.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0"
+    "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.17"
   }
 }
